tests/ui/const-generics/mgca/type-const-free-value-type-mismatch.next.stderr
error: the constant `"this isn't a usize"` is not of type `usize`
  --> $DIR/type-const-free-value-type-mismatch.rs:9:1
   |
LL | type const N: usize = "this isn't a usize";
   | ^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&'static str`

error[E0284]: type annotations needed: cannot normalize `f::{constant#0}`
  --> $DIR/type-const-free-value-type-mismatch.rs:12:11
   |
LL | fn f() -> [u8; const { N }] {}
   |           ^^^^^^^^^^^^^^^^^ cannot normalize `f::{constant#0}`

error[E0308]: mismatched types
  --> $DIR/type-const-free-value-type-mismatch.rs:12:11
   |
LL | fn f() -> [u8; const { N }] {}
   |    -      ^^^^^^^^^^^^^^^^^ expected `[u8; _]`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0284, E0308.
For more information about an error, try `rustc --explain E0284`.
